# api

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  Settings.toml  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: ci.yml
client/: Cargo.toml
client/src/: assets_prices.rs  config.rs  config_client.rs  fiat_quotes.rs  ip_address.rs  main.rs  node_client.rs  nodes.rs  plausible_client.rs  status.rs
deamon/: Cargo.toml
deamon/src/: main.rs
fiat/: Cargo.toml
fiat/src/: client.rs  fiat_mappings.json  lib.rs  mercuryo.rs  model.rs  moonpay.rs  ramp.rs  transak.rs  updater.rs
price_client/: Cargo.toml
price_client/src/: coingecko.rs  lib.rs  mod.rs  price_client.rs  price_updater.rs
pricer/: Cargo.toml
pricer/src/: client.rs  coingecko.rs  lib.rs  model.rs  price_updater.rs
redis_client/: Cargo.toml
redis_client/src/: lib.rs  mod.rs
settings/src/: lib.rs
src/: Rocket.toml  ip_address.rs  main.rs  status.rs
