[workspace.package]
version = "1.0.0"
edition = "2021"

[workspace]
members = [
    "deamon",
    "client",
    "redis_client",
    "price_client",
]

default-members = [
    "deamon",
    "client",
]

[workspace.dependencies]
serde = { version = "1.0.163", features = ["derive"] }
serde_json = { version = "1.0.96" } 
tokio = { version = "1", features = ["full"] }
redis = { version = "0.23.0", features = ["tokio-comp", "json"] }
reqwest = {version = "0.11.17", features = ["json"]}