[package]
name = "client"
edition = { workspace = true }
version = { workspace = true }

[dependencies]
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
rocket-client-addr = { version = "0.5.2"}
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
config = { workspace = true }
redis_client = { path = "../redis_client" }
pricer = { path = "../pricer" }
fiat = { path = "../fiat" }
settings = { path = "../settings" }