[package]
name = "client"
edition = { workspace = true }
version = { workspace = true }

[dependencies]
rocket = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
config = { workspace = true }
redis_client = { path = "../redis_client" }
pricer = { path = "../pricer" }
fiat = { path = "../fiat" }
settings = { path = "../settings" }