[package]
name = "price_client"
edition = { workspace = true }
version = { workspace = true }

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
redis_client = { path = "../redis_client" }
redis = { workspace = true }
reqwest = { workspace = true }
ethaddr = { version = "0.1.2" }